# TSC2018_Design

./: .gitignore  Decorators.py  LICENSE  Malzememodelleri.ipynb  README.md  TBDY.ipynb  TBDYConfimentBarsRules.py  TSCResponseSpectra.py  TbdyMalzeme.py  TbdyMaterialModels.py  malzememodelleri.py  material.py  pyproject.toml  requirements.txt  section.py  tester.py
.github/workflows/: IssuesWorkflow.yml  deploy.yml  greetings.yml  publish-to-github.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish-to-testpypi.yml  python-package.yml  setup.yml
src/: DatabaseTablesResults.ipynb  Enums.py  SeismicLoad.py  TBDY.ipynb  TSCConfimentBarsRules.py  TSCResponseSpectra.py  __init__.py
src/Design/: ConfimentBarsRules.py  Frp.py  ResponseSpectra.py  __init__.py
src/MSCSI/: AnalysisResult.py  Analyze.py  CaseStaticNonlinear.py  Combo.py  Connector.py  Database.py  DatabaseTablesResults.ipynb  ErrorHandler.py  File.py  Frame.py  FunctionRS.py  LoadCases.py  LoadPattern.py  MaterialProp.py  Model.py  Story.py  __init__.py
src/TSC/Design/: ConfimentBarsRules.py  Definitions.py  Error.py  GlobalParamCheck.py  MaterialModels.py  ResponseSpectra.py
src/TSC/MSCSI/: AnalysisResult.py  Analyze.py  CaseStaticNonlinear.py  Combo.py  Connector.py  Database.py  Enums.py  ErrorHandler.py  File.py  Frame.py  LoadCases.py  LoadPattern.py  MaterialProp.py  Model.py  PluginCallback.py  Story.py
src/TSC/Utility/: Decorators.py
src/TSC2018_Design/: TBDY.ipynb  TSCConfimentBarsRules.py  __init__.py
tests/: test_FRP.py  test_MSCSI_LoadCase.py  test_TSCConfinmentBarsRules.py
