[project]
name = "TSC2018_Design"
version = "0.0.1"
authors = [
  { name="Muhammed Sural", email="muhammedsural@gmail.com" },
]
description = "TSC2018 design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/muhammedsural/TSC2018_Design"
"Bug Tracker" = "https://github.com/muhammedsural/TSC2018_Design/issues"
